prodMetadata/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Ally_Sponsor__c</fullName>
        <label>Ally Sponsor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <formula>Contact.npe01__AlternateEmail__c</formula>
        <label>Alternate Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <inlineHelpText>archives previous responses from the same contact</inlineHelpText>
        <label>Archive</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <externalId>true</externalId>
        <label>Birthday</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Calendar Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Center_Caller__c</fullName>
        <label>Call Center Caller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alicia Richardson</fullName>
                </value>
                <value>
                    <fullName>Allison Chansky</fullName>
                </value>
                <value>
                    <fullName>Anthony Pike</fullName>
                </value>
                <value>
                    <fullName>Blake Henderson</fullName>
                </value>
                <value>
                    <fullName>Brandon Willitts</fullName>
                </value>
                <value>
                    <fullName>Brian DiPaolo</fullName>
                </value>
                <value>
                    <fullName>Brian Graham</fullName>
                </value>
                <value>
                    <fullName>Carly Henderson</fullName>
                </value>
                <value>
                    <fullName>Chris Brogger</fullName>
                </value>
                <value>
                    <fullName>Christina Kim</fullName>
                </value>
                <value>
                    <fullName>Christina Roof</fullName>
                </value>
                <value>
                    <fullName>Chris Zezza</fullName>
                </value>
                <value>
                    <fullName>Craig Spivack</fullName>
                </value>
                <value>
                    <fullName>Dana Morrissey</fullName>
                </value>
                <value>
                    <fullName>Derek Bennett</fullName>
                </value>
                <value>
                    <fullName>Derek Coy</fullName>
                </value>
                <value>
                    <fullName>Devon Collins</fullName>
                </value>
                <value>
                    <fullName>Ellen Marty</fullName>
                </value>
                <value>
                    <fullName>Garrett Gleeson</fullName>
                </value>
                <value>
                    <fullName>Gilbert Nguyen</fullName>
                </value>
                <value>
                    <fullName>Gretchen Anderson</fullName>
                </value>
                <value>
                    <fullName>Jacob Worrell</fullName>
                </value>
                <value>
                    <fullName>Jason Hansman</fullName>
                </value>
                <value>
                    <fullName>Jeff Park</fullName>
                </value>
                <value>
                    <fullName>Jonathan Schleifer</fullName>
                </value>
                <value>
                    <fullName>Kara Horowitz</fullName>
                </value>
                <value>
                    <fullName>Kate Horner</fullName>
                </value>
                <value>
                    <fullName>Kate Kelly</fullName>
                </value>
                <value>
                    <fullName>Kate O&apos;Gorman</fullName>
                </value>
                <value>
                    <fullName>Katie VanLangen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Sponsor__c</fullName>
        <label>Champion Sponsor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Campaign_Lift_URL_Autocomplete__c</fullName>
        <label>C&amp;P Campaign Lift URL Autocomplete</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Campaign_Lift_URL__c</fullName>
        <label>C&amp;P Campaign Lift URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Increment__c</fullName>
        <label>C&amp;P Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Expiration_date__c</fullName>
        <label>C&amp;P Lift Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Last_Updated__c</fullName>
        <label>C&amp;P Lift Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Start_Value__c</fullName>
        <label>C&amp;P Start Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Contact.Company__c</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Primary_Mailing_List__c</fullName>
        <formula>Contact.Contact_Primary_Mailing_List__c</formula>
        <label>Contact Primary Mailing List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Available_Volunteer__c</fullName>
        <description>What days are you most available to volunteer?</description>
        <label>Days avaliable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Friend_Individual__c</fullName>
        <label>Friend Individual</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guest_s__c</fullName>
        <inlineHelpText>Names of any guest(s)</inlineHelpText>
        <label>Guest(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hero_Sponsor__c</fullName>
        <label>Hero Sponsor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_A_Week__c</fullName>
        <description>How many hours a week are you able to spend in a leadership role?</description>
        <label>Leadership avaliable hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the DIA Integration.  Not for users.</description>
        <inlineHelpText>Used by the DIA Integration.  Not for users.</inlineHelpText>
        <label>Integrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KW_Issues__c</fullName>
        <formula>IF(INCLUDES(  Contact.kw__Issues__c , &quot;Veterans&quot;), &quot;Veterans&quot;, NULL) + BR() + 
IF(INCLUDES( Contact.kw__Issues__c , &quot;Military&quot;), &quot;Military&quot;, NULL)</formula>
        <label>KW Issues</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_POC__c</fullName>
        <formula>Campaign.Local_POC__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Targeting_Deadline__c</fullName>
        <inlineHelpText>The ideal date by which we will have contacted this individual next in whichever manner deemed applicable.</inlineHelpText>
        <label>Next Targeting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_2__c</fullName>
        <label>Notes 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_3__c</fullName>
        <label>Notes 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <inlineHelpText>Number of guests that a contact is bringing to an event</inlineHelpText>
        <label>Number of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Own_Transportation__c</fullName>
        <description>Are you able to provide your own transportation?</description>
        <label>Provide your own transportation?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POC_Email__c</fullName>
        <label>POC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <formula>Contact.npe01__HomeEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum_Hero__c</fullName>
        <label>Platinum Hero</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volunteer - Leader/Host</fullName>
                </value>
                <value>
                    <fullName>Volunteer - General</fullName>
                </value>
                <value>
                    <fullName>Recruited At</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsorship_or_Ticket_Type__c</fullName>
        <inlineHelpText>Sponsorship/Ticket type for the Gala</inlineHelpText>
        <label>Sponsorship or Ticket Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Evaluation_of_Volunteer__c</fullName>
        <inlineHelpText>1 (Least Involved) to 5 (Most Involved)</inlineHelpText>
        <label>Staff Evaluation of Volunteer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporter_Individual__c</fullName>
        <label>Supporter Individual</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <label>Table</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comp</fullName>
                </value>
                <value>
                    <fullName>Comp Press</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Ticket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_Sponsor__c</fullName>
        <label>Valor Sponsor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vol_s_Evaluation_of_Event_AAR__c</fullName>
        <label>Vol&apos;s Evaluation of Event (AAR)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vol_s_Evaluation_of_Volunteer_Exp__c</fullName>
        <label>Vol&apos;s Evaluation of Volunteer Exp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Hours_Spent__c</fullName>
        <label>Volunteer Hours Spent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percET__Effective_Action_Date__c</fullName>
        <description>If campaign has start &amp; end date &amp; response logged within that span, use FirstRespondedDate of CM.  Otherwise:
* if campaign has start &amp; End date, use end date
* if campaign has start date but no end date, and response logged within a month of the start date, use FirstRespondedDate
* if campaign has only start OR End date, use the one we have
* else use created date of campaign</description>
        <formula>IF (  
NOT(ISBLANK(Campaign.StartDate)) ,
        IF ( NOT(ISBLANK(Campaign.EndDate)),
                IF (Campaign.StartDate &lt;=  FirstRespondedDate &amp;&amp; Campaign.EndDate &gt;= FirstRespondedDate,
                        FirstRespondedDate,
                        Campaign.EndDate),        
                IF (FirstRespondedDate &gt; Campaign.StartDate &amp;&amp; FirstRespondedDate - Campaign.StartDate &lt;= 31,
                        FirstRespondedDate ,
                        Campaign.StartDate)),
        IF ( NOT(ISBLANK(Campaign.EndDate)),
                Campaign.EndDate,
                DATEVALUE(Campaign.CreatedDate)
        )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date this action is considered to have taken place for StepUp scoring.  Depends on the campaign start/end dates and when the membership was added.</inlineHelpText>
        <label>Effective Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>percET__Engagement_Jump_From_Level__c</fullName>
        <inlineHelpText>Set automatically by StepUp.</inlineHelpText>
        <label>Engagement Jump From Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Engagement_Jump_To_Level__c</fullName>
        <inlineHelpText>Set automatically by StepUp.</inlineHelpText>
        <label>Engagement Jump To Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Engagement_Jump_Type__c</fullName>
        <description>Breakthrough = First time this high up the pyramid
Rebound = Was at this level or higher in the past, but had since dropped to a lower level</description>
        <label>Engagement Jump Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakthrough</fullName>
                </value>
                <value>
                    <fullName>Rebound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percET__Engagement_Level_At_Insert__c</fullName>
        <description>Set by trigger, hide from end-user</description>
        <inlineHelpText>The contact&apos;s engagement level (as a number) at the time this campaign membership was created.  Set automatically by StepUp.</inlineHelpText>
        <label>Engagement Level At Insert</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Engagement_Levels_Jumped__c</fullName>
        <formula>percET__Engagement_Jump_To_Level__c -  percET__Engagement_Jump_From_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of levels (if any) this contact jumped because of paritcipation in this campaign.</inlineHelpText>
        <label>Engagement Levels Jumped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Is_Engagement_Jump__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Jump</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>percET__Is_New_Supporter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by campaign batch process</description>
        <inlineHelpText>Was participation in this campaign responsible for giving the contact their very first engagement level above 0? Set automatically by StepUp.</inlineHelpText>
        <label>New Supporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>percET__Level_Change_Timestamp_At_Insert__c</fullName>
        <description>set by trigger</description>
        <inlineHelpText>Datestamp of last engagement level chg when CM entered.  Set automatically by StepUp.</inlineHelpText>
        <label>Engagement Lvl Chg Timestamp At Insert</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Classy Team</label>
        <referenceTo>stayclassy__Classy_Team__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
    <validationRules>
        <fullName>FourOrFewerSupporterIndividualTickets</fullName>
        <active>false</active>
        <description>no more than 4 $2500 tickets (supporter individual) can be purchased at one time</description>
        <errorConditionFormula>Supporter_Individual__c &gt; 4</errorConditionFormula>
        <errorMessage>We have limited purchase of Supporter Individual ($2500) to four tickets per purchaser. Please contact heroesgala@iava.org with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TwoOrFewerFriendIndividualTickets</fullName>
        <active>false</active>
        <description>no more than 2 $1250 tickets (friend individual) can be purchased at one time</description>
        <errorConditionFormula>Friend_Individual__c &gt; 2</errorConditionFormula>
        <errorMessage>We have limited purchase of Friend Individual ($1250) to two tickets per purchaser. Please contact heroesgala@iava.org with any questions.</errorMessage>
    </validationRules>
</CustomObject>